# amazonq-sandbox

./: .gitignore  EXAMPLE_OUTPUT.md  Main.hs  Makefile  README.md  hello-world-generator.cabal  hello_world.py  hello_world_generator.py  pyproject.toml  stack.yaml
.amazonq/rules/: practices.md
firewall/: myrules.my  myrules2.my
